--- a/solution/recap-typescript-workshop/package.json
+++ b/solution/recap-typescript-workshop/package.json
@@ -6,15 +6,16 @@
   "license": "UNLICENSED",
   "private": true,
   "dependencies": {
-    "@sap/cds": "^7",
-    "express": "^4"
+    "@sap/cds": "^8",
+    "express": "^4.21.0"
   },
   "devDependencies": {
     "@cap-js/cds-typer": ">=0.1",
+    "@cap-js/cds-types": "^0.6.5",
     "@cap-js/sqlite": "^1",
-    "@sap/cds-dk": "^7",
-    "cds-launchpad-plugin": "^2.1.8",
-    "cds-plugin-ui5": "^0.6.13"
+    "@sap/cds-dk": "^8",
+    "cds-launchpad-plugin": "^2.2.0",
+    "cds-plugin-ui5": "^0.9.3"
   },
   "scripts": {
     "start": "cds-serve",
